--- a/issue-tracking.html
+++ b/issue-tracking.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>Logging via SLF4J - Issue Tracking</title>
+    <title>JRebel Plugin - Issue Tracking</title>
     <style type="text/css" media="all">
       @import url("./css/maven-base.css");
       @import url("./css/maven-theme.css");
@@ -17,7 +17,7 @@
   <body class="composite">
     <div id="banner">
                     <div id="bannerLeft">
-                Logging via SLF4J
+                JRebel Plugin
                 </div>
                     <div class="clear">
         <hr/>
@@ -30,7 +30,7 @@
         <span id="publishDate">Last Published: 2012-12-14</span>
                   &nbsp;| <span id="projectVersion">Version: 1.2.3-SNAPSHOT</span>
                       </div>
-            <div class="xright">                    <a href="./" title="Logging via SLF4J">Logging via SLF4J</a>
+            <div class="xright">                    <a href="./" title="JRebel Plugin">JRebel Plugin</a>
               
             
       </div>
@@ -97,7 +97,7 @@
             </li>
               </ul>
         </li>
-                                                                                                                                                                                                                                                                                                                                                                    <li class="collapsed">
+                                                                                                                                                                                                                                      <li class="collapsed">
                           <a href="project-reports.html" title="Project Reports">Project Reports</a>
                   </li>
           </ul>
