--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>morphia-no-proxy-deps - About</title>
+    <title>JSR303 Validation - About</title>
     <style type="text/css" media="all">
       @import url("./css/maven-base.css");
       @import url("./css/maven-theme.css");
@@ -17,7 +17,7 @@
   <body class="composite">
     <div id="banner">
                     <div id="bannerLeft">
-                morphia-no-proxy-deps
+                JSR303 Validation
                 </div>
                     <div class="clear">
         <hr/>
@@ -30,7 +30,7 @@
         <span id="publishDate">Last Published: 2012-12-20</span>
                   &nbsp;| <span id="projectVersion">Version: 1.2.3-SNAPSHOT</span>
                       </div>
-            <div class="xright">                    <a href="./" title="morphia-no-proxy-deps">morphia-no-proxy-deps</a>
+            <div class="xright">                    <a href="./" title="JSR303 Validation">JSR303 Validation</a>
               
             
       </div>
@@ -97,7 +97,7 @@
             </li>
               </ul>
         </li>
-                                                                                                                                                                                                                                      <li class="collapsed">
+                                                                                                                                                                                                                                                                                                                                                                    <li class="collapsed">
                           <a href="project-reports.html" title="Project Reports">Project Reports</a>
                   </li>
           </ul>
@@ -110,7 +110,7 @@
     </div>
     <div id="bodyColumn">
       <div id="contentBox">
-        <div class="section"><h2>About morphia-no-proxy-deps<a name="About_morphia-no-proxy-deps"></a></h2><a name="About_morphia-no-proxy-deps"></a><p>Morphia is an Object-Document Mapper, written in Java for MongoDB.
+        <div class="section"><h2>About JSR303 Validation<a name="About_JSR303_Validation"></a></h2><a name="About_JSR303_Validation"></a><p>Morphia is an Object-Document Mapper, written in Java for MongoDB.
         Application developer authoring code in Java and using the mongo-java-driver
         can use Morphia to map POJO classes into MongoDB documents and vice-versa.
         Morphia provides a Datastore, Query, and DAO-style interfaces including CRUD
